# ClunkyDB

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  main.cpp
budget/: paycheck_schema.h  types.h
query/: field_ref.h  query_ast.h  query_ast_test.cpp
schema/: document.h  fixed_string.h  schema_test.cpp
serialization/: containers.h  domain.h  domain_serialization_test.cpp  primitives.h  serialization_test.cpp  serializer.h  string.h
storage/: collection.h  collection_test.cpp
