load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "schema",
    hdrs = [
        "budget/paycheck_schema.h",
        "budget/types.h",
        "schema/document.h",
        "schema/fixed_string.h",
    ],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
    ],
)

cc_test(
    name = "schema_test",
    srcs = ["schema/schema_test.cpp"],
    deps = [":schema"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
    ],
)

cc_binary(
    name = "clunkydb",
    srcs = ["main.cpp"],
    deps = [":schema"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-Wpedantic",
    ],
)
