module(name = "clunkydb", version = "0.1.0")

bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "hedron_compile_commands", version = "0.0.0")
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
)
